--- a/UIKit/storyboard/UIKit_Storyboard_Navigation_Tutorial/UIKit_Storyboard_Navigation_Tutorial/Storyboard/Base.lproj/Main.storyboard
+++ b/UIKit/storyboard/UIKit_Storyboard_Navigation_Tutorial/UIKit_Storyboard_Navigation_Tutorial/Storyboard/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4t7-Uy-zMp">
-                                <rect key="frame" x="20" y="260.33333333333331" width="353" height="523.33333333333348"/>
+                                <rect key="frame" x="20" y="245.99999999999997" width="353" height="360.33333333333326"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4NJ-xQ-CxR">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="34.333333333333336"/>
@@ -27,7 +27,7 @@
                                         <buttonConfiguration key="configuration" style="plain" title="두번째로 이동"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynw-yD-ubz">
-                                        <rect key="frame" x="0.0" y="54.333333333333371" width="353" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="54.333333333333314" width="353" height="34.333333333333343"/>
                                         <color key="backgroundColor" red="0.20000000000000001" green="0.62745098040000002" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="세번째로 이동"/>
@@ -48,7 +48,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Wk-lq-tFe">
-                                        <rect key="frame" x="0.0" y="217.33333333333337" width="353" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="217.33333333333331" width="353" height="34.333333333333343"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="프로그램 푸시 - 확장, 프로토콜"/>
@@ -56,60 +56,22 @@
                                             <action selector="doSecondPushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vlQ-Qe-IgI"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cse-jn-top" customClass="NavigationButton" customModule="UIKit_Storyboard_Navigation_Tutorial" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="271.66666666666669" width="353" height="34.333333333333314"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="커스텀 푸시 - 두번째로 이동"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="route" value="SecondVC"/>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="handlePushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4x0-Mc-dsC"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OMT-q5-xOP" customClass="NavigationButton" customModule="UIKit_Storyboard_Navigation_Tutorial" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="326.00000000000006" width="353" height="34.333333333333314"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="커스텀 푸시 - 세번째로 이동"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="route" value="ThirdVC"/>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="handlePushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F0i-kv-BfE"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDi-kC-qvh" customClass="NavigationButton" customModule="UIKit_Storyboard_Navigation_Tutorial" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="380.33333333333331" width="353" height="34.333333333333314"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="커스텀 푸시 - 디테일로 이동"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="route" value="DetailVC"/>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="handlePushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kpR-5k-5CY"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jgh-XD-91E" customClass="NavigationButton" customModule="UIKit_Storyboard_Navigation_Tutorial" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="434.66666666666669" width="353" height="34.333333333333314"/>
+                                        <rect key="frame" x="0.0" y="271.66666666666663" width="353" height="34.333333333333314"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="프로그램 푸시 - 두번째로 이동"/>
                                         <connections>
                                             <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l5Y-KU-O9G"/>
-                                            <action selector="handlePushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y3B-sQ-tx0"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATx-7u-rBl" customClass="NavigationButton" customModule="UIKit_Storyboard_Navigation_Tutorial" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="489.00000000000006" width="353" height="34.333333333333314"/>
+                                        <rect key="frame" x="0.0" y="326" width="353" height="34.333333333333314"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="프로그램 푸시 - 세번째로 이동"/>
                                         <connections>
                                             <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yri-FN-7vI"/>
-                                            <action selector="handlePushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qgx-hV-gVq"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -145,7 +107,7 @@
                             <constraint firstItem="4t7-Uy-zMp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5WK-uI-eTj"/>
                             <constraint firstItem="4t7-Uy-zMp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E4Z-4a-5Ye"/>
                             <constraint firstItem="fCq-Jd-ZRc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xdk-rQ-ORh"/>
-                            <constraint firstItem="fCq-Jd-ZRc" firstAttribute="top" secondItem="4t7-Uy-zMp" secondAttribute="bottom" id="cQ9-UY-RAn"/>
+                            <constraint firstItem="4t7-Uy-zMp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Zqd-bW-4jO"/>
                             <constraint firstItem="pIS-cZ-Mao" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g0V-ES-J6a"/>
                             <constraint firstItem="K3T-ug-jqj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="g5f-P2-VLo"/>
                             <constraint firstItem="pIS-cZ-Mao" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hdA-4a-L06"/>
